[gd_scene load_steps=2 format=3 uid="uid://b5gm1h3t1vcbt"]

[ext_resource type="Script" path="res://scripts/stretchy_tilemap.gd" id="1_5trgv"]

[node name="StretchyTilemap" type="Node2D"]
script = ExtResource("1_5trgv")

[node name="LeftTileMap" type="TileMapLayer" parent="."]

[node name="RightTileMap" type="TileMapLayer" parent="."]

[node name="MiddleTileMap" type="TileMapLayer" parent="."]
